Fix background not showing on mobile by removing attachment: fixed

--- a/src/app/main/main.component.css
+++ b/src/app/main/main.component.css
@@ -663,7 +663,7 @@ footer img{
 
   .slideshow {
     min-height: 5vh;
-    max-height: 10vh;
+    max-height: 14vh;
   }
 
   .menu-card {
